# serializer version: 1
# name: test_client_compatible_with_legacy_webhook
  _CallList([
    _Call(
      tuple(
        'https://foo.webhook.office.com/bar/baz',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'text': "Run failed! <a href='http://localhost:3000'>View in Dagit</a>",
                'title': 'Dagster Pipeline Alert',
              }),
              'contentType': 'application/vnd.microsoft.card.hero',
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': None,
      }),
    ),
  ])
# ---
# name: test_client_compatible_with_workflow_webhook
  _CallList([
    _Call(
      tuple(
        'https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'body': list([
                  dict({
                    'text': 'Run failed! [View in Dagit](http://localhost:3000)',
                    'type': 'TextBlock',
                    'wrap': True,
                  }),
                ]),
                'type': 'AdaptiveCard',
                'version': '1.5',
              }),
              'contentType': 'application/vnd.microsoft.card.adaptive',
              'contentUrl': None,
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': None,
      }),
    ),
  ])
# ---
